--- a/introCSS/styles.css
+++ b/introCSS/styles.css
@@ -1,9 +1,15 @@
 body {
-  background-color: #66bfbf;
+  background-color: whitesmoke;
 }
 hr {
   border-style: dotted none none;
   border-color: gray;
   border-width: 8px;
   width: 5%;
+}
+h1 {
+  color: #66bfbf;
+}
+h3 {
+  color: #66bfbf;
 }
