Making a fun bacon fan site

--- a/introCSS/styles.css
+++ b/introCSS/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: whitesmoke;
+  background-color: #fffbdf;
 }
 hr {
   border-style: dotted none none;
@@ -8,8 +8,8 @@ hr {
   width: 5%;
 }
 h1 {
-  color: #66bfbf;
+  color: #34656d;
 }
 h3 {
-  color: #66bfbf;
+  color: #5b8a72;
 }
