--- a/introCSS/baconFanSite/styles.css
+++ b/introCSS/baconFanSite/styles.css
@@ -1,3 +1,19 @@
+body {
+  background-color: black;
+}
+
 h1 {
   color: red;
+  font-size: 200px;
+  text-align: center;
+}
+
+img {
+  background-color: red;
+  align-self: center;
+}
+
+p {
+  color: red;
+  text-align: center;
 }
