added some hover functionaltiy in

--- a/introCSS/baconFanSite/styles.css
+++ b/introCSS/baconFanSite/styles.css
@@ -14,7 +14,13 @@ body {
 .broccoli {
   background-color: red;
 }
+.circular {
+  border-radius: 100%;
+}
 
+img:hover {
+  background-color: gold;
+}
 p {
   color: red;
   text-align: center;
