--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -1,3 +1,10 @@
 body {
-  background-color: blue;
+  margin: 0px;
+}
+h1 {
+  margin-top: 0;
+}
+div {
+  background-color: #184d47;
+  color: #96bb7c;
 }
