--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -4,7 +4,18 @@ body {
 h1 {
   margin-top: 0;
 }
-div {
+.top-container {
   background-color: #184d47;
   color: #96bb7c;
+}
+
+.middle-container {
+  height: 200px;
+  width: 200px;
+  background-color: hotpink;
+}
+.bottom-container {
+  height: 200px;
+  width: 200px;
+  background-color: purple;
 }
