Adding some more color

--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -12,7 +12,7 @@ h1 {
 .middle-container {
   height: 200px;
   width: 200px;
-  background-color: hotpink;
+  background-color: yellow;
 }
 .bottom-container {
   height: 200px;
