--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -1,5 +1,6 @@
 body {
   margin: 0px;
+  text-align: center;
 }
 h1 {
   margin-top: 0;
@@ -7,6 +8,8 @@ h1 {
 .top-container {
   background-color: #184d47;
   color: #96bb7c;
+  position: relative;
+  padding-top: 100px;
 }
 
 .middle-container {
@@ -21,4 +24,14 @@ h1 {
 }
 .pro {
   text-decoration: underline;
+}
+.top-cloud {
+  position: absolute;
+  right: 300px;
+  top: 50px;
+}
+.bottom-cloud {
+  position: absolute;
+  left: 300px;
+  bottom: 300px;
 }
