--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -1,12 +1,20 @@
 body {
   margin: 0px;
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #184d47;
 }
 h1 {
   margin-top: 0;
+  font-family: 'Roboto', sans-serif;
+}
+h2 {
+  font-family: 'Open Sans', sans-serif;
+}
+h3 {
+  font-family: 'Open Sans', sans-serif;
 }
 .top-container {
-  background-color: #184d47;
   color: #96bb7c;
   position: relative;
   padding-top: 100px;
