--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -14,21 +14,14 @@ h2 {
 h3 {
   font-family: 'Open Sans', sans-serif;
 }
-.top-container {
+.top-section {
   color: #96bb7c;
   position: relative;
   padding-top: 100px;
 }
-
-.middle-container {
-  height: 200px;
-  width: 200px;
-  background-color: Green;
+.middle-section {
 }
-.bottom-container {
-  height: 200px;
-  width: 200px;
-  background-color: purple;
+.bottom-section {
 }
 .pro {
   text-decoration: underline;
