--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -7,15 +7,21 @@ body {
 h1 {
   margin-top: 0;
   font-family: 'Roboto', sans-serif;
+  color: #96bb7c;
+  font-size: 45px;
 }
 h2 {
   font-family: 'Open Sans', sans-serif;
+  color: #96bb7c;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
+  color: #96bb7c;
+}
+P {
+  color: #fad586;
 }
 .top-section {
-  color: #96bb7c;
   position: relative;
   padding-top: 100px;
 }
