--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -8,7 +8,7 @@ h1 {
   margin-top: 0;
   font-family: 'Roboto', sans-serif;
   color: #96bb7c;
-  font-size: 45px;
+  font-size: 562.5%;
 }
 h2 {
   font-family: 'Open Sans', sans-serif;
