--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -5,14 +5,16 @@ body {
   background-color: #184d47;
 }
 h1 {
-  margin-top: 0;
+  margin: 50px auto 0 auto;
   font-family: 'Roboto', sans-serif;
   color: #96bb7c;
-  font-size: 562.5%;
+  /* font size is this times 16 */
+  font-size: 5rem;
 }
 h2 {
   font-family: 'Open Sans', sans-serif;
   color: #96bb7c;
+  font-size: 2.5rem;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
@@ -21,6 +23,7 @@ h3 {
 P {
   color: #fad586;
 }
+
 .top-section {
   position: relative;
   padding-top: 100px;
