--- a/Intermediate CSSmod/Portfolio Site/style.css
+++ b/Intermediate CSSmod/Portfolio Site/style.css
@@ -16,7 +16,7 @@ h2 {
   font-family: 'Open Sans', sans-serif;
   color: #96bb7c;
   font-size: 2.5rem;
-  line-height: 2;
+  padding-bottom: 10px;
 }
 h3 {
   font-family: 'Open Sans', sans-serif;
@@ -25,18 +25,35 @@ h3 {
 }
 P {
   color: #fad586;
+  line-height: 2;
 }
 a {
   /* for the challange */
   color: #11999e;
+}
+hr {
+  border: dotted #d6efc7 6px;
+  border-bottom: none;
+  width: 10%;
+  margin: 100px auto;
+}
+.intro {
+  width: 30%;
+  margin: auto;
+}
+.contact-message {
+  width: 30%;
+  margin: 40px auto 60px;
 }
 .top-section {
   position: relative;
   padding-top: 100px;
 }
 .middle-section {
+  margin: 100px 0;
 }
 .bottom-section {
+  padding: 50px 0 20px;
 }
 .pro {
   text-decoration: underline;
@@ -44,22 +61,42 @@ a {
 .top-cloud {
   position: absolute;
   right: 300px;
-  top: 50px;
+  top: 40px;
 }
 .bottom-cloud {
   position: absolute;
-  left: 300px;
+  left: 250px;
   bottom: 300px;
 }
 .skill-row {
   width: 50%;
   margin: 100px auto 100px auto;
-  text-align: left;
-  line-height: 2;
+  /* text-align: left; */
 }
 
 .reactNative-img {
   width: 25%;
-  float: right;
+  /* float: right; */
   margin-right: 30px;
+}
+
+.myButton {
+  background: linear-gradient(to bottom, #44c767 5%, #2fad7b 100%);
+  background-color: #44c767;
+  border-radius: 8px;
+  display: inline-block;
+  cursor: pointer;
+  color: #f5e9f5;
+  font-family: Arial;
+  font-size: 20px;
+  padding: 16px 31px;
+  text-decoration: none;
+}
+.myButton:hover {
+  background: linear-gradient(to bottom, #2fad7b 5%, #44c767 100%);
+  background-color: #2fad7b;
+}
+.myButton:active {
+  position: relative;
+  top: 1px;
 }
