added another font

--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -2,7 +2,8 @@
   background-color: #ff4c68;
 }
 h1 {
-  font-family: Montserrat-Black;
+  font-family: Montserrat;
   font-size: 3rem;
+  font-weight: 900;
   line-height: 1.5;
 }
