--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -8,10 +8,18 @@ body {
 }
 h1 {
   font-family: Montserrat-Black;
-  font-size: 3em;
+  font-size: 3rem;
   font-weight: 900;
   line-height: 1.5;
 }
 .container-fluid {
   padding: 3% 15%;
+}
+
+/* Nav Bar */
+
+.navbar-brand {
+  font-family: Ubuntu;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
