updated the buttons

--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -27,3 +27,17 @@ h1 {
   font-size: 2.5rem;
   font-weight: bold;
 }
+
+.nav-item {
+  padding: 0 19px;
+}
+
+.nav-link {
+  font-family: Montserrat-Light;
+  font-size: 1.2rem;
+}
+
+/* download Buttons */
+.dl-btn {
+  margin: 5% 3% 5% 0%;
+}
