--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -12,6 +12,11 @@ h1 {
   font-weight: 900;
   line-height: 1.5;
 }
+h2 {
+  font-family: Montserrat-Bold;
+  font-size: 3rem;
+  line-height: 1.5;
+}
 .container-fluid {
   padding: 3% 15%;
 }
@@ -86,4 +91,10 @@ section p {
   padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
+  color: #fff;
+}
+.testimonial-image {
+  width: 10%;
+  border-radius: 100%;
+  margin: 20px;
 }
