--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -87,6 +87,7 @@ section p {
   color: gold;
 }
 
+/* testimonials */
 #testimonials {
   padding: 7% 15%;
   text-align: center;
@@ -97,4 +98,12 @@ section p {
   width: 10%;
   border-radius: 100%;
   margin: 20px;
+}
+
+/* Press section */
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
 }
