added some padding to the testimonial carousel

--- a/Intermediate CSSmod/Bootstrap-installation/style.css
+++ b/Intermediate CSSmod/Bootstrap-installation/style.css
@@ -89,7 +89,6 @@ section p {
 
 /* testimonials */
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
@@ -111,4 +110,8 @@ section p {
 .press-images {
   width: 12%;
   margin: 20px 20px 50px;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
