--- a/Full Stack Web Dev/section 3/style/style.css
+++ b/Full Stack Web Dev/section 3/style/style.css
@@ -1,7 +1,14 @@
-h1 {
+h1,
+h2 {
   color: teal;
   font-size: 40px;
 }
 p {
+  color: violet;
+  font-size: 1.5em;
+  border: 1px solid blue;
+}
+
+ul {
   color: violet;
 }
