added some css changes to the p and li items

--- a/Full Stack Web Dev/section 3/style/style.css
+++ b/Full Stack Web Dev/section 3/style/style.css
@@ -1,16 +1,6 @@
-h1,
-h2 {
-  color: teal;
-  font-size: 40px;
-}
 p,
-h2,
 li {
-  color: violet;
-  font-size: 1.5em;
-  border: 1px solid blue;
-}
-
-a {
-  color: yellowgreen;
+  font-size: 17px;
+  line-height: 2;
+  letter-spacing: 1px;
 }
