--- a/Full Stack Web Dev/section 3/style/style.css
+++ b/Full Stack Web Dev/section 3/style/style.css
@@ -22,6 +22,8 @@ h1 {
 body {
   margin: 0 auto;
   padding: 0 20px 20px 20px;
+  width: 600px;
+  border: 4px solid black;
 }
 html {
   background-color: #90b4d1;
