--- a/Full Stack Web Dev/section 3/style/style.css
+++ b/Full Stack Web Dev/section 3/style/style.css
@@ -8,6 +8,9 @@ li {
 h1 {
   font-size: 55px;
   text-align: center;
+  margin: 0;
+  padding: 20px 0;
+  color: blueviolet;
 }
 
 #quote {
@@ -24,6 +27,7 @@ body {
   padding: 0 20px 20px 20px;
   width: 600px;
   border: 4px solid black;
+  background-color: yellow;
 }
 html {
   background-color: #90b4d1;
