--- a/Full Stack Web Dev/section 3/style/style.css
+++ b/Full Stack Web Dev/section 3/style/style.css
@@ -13,6 +13,9 @@ h1 {
   color: blueviolet;
   text-shadow: 3px 3px 1px black;
 }
+h2 {
+  font-family: Arial, Helvetica, sans-serif;
+}
 
 #quote {
   font-style: italic;
